Changes since last push:
 - Boulders can now move together and carry movables

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.
 - You can place dirt on top of creatures, including yourself
 - Tiles have an opacity between 0 and 64, but right now it only matters whether it's zero or not.
 - If carried by a boulder with another boulder right behind you, the top
boulder updates first and traps you.

To do:
 - load and unload textures
 - rewrite almost all world generation code to use noise
 - stacking items, throwing / picking up items
 - Trees!
 - Store data for UI and sprites in a file instead of the source code
 - save and load the player
 - Make all public Map functions accept any x value