@@ -30,13 +30,15 @@ class Boulder: public Tile {
     /* Same, but for falling. */
     std::set<TileType> tilesSunk;
 
-    /* The amount it moves in the x direction. Positive is to the right,
-    negative is to the left, and 0 is for a boulder that doesn't ever move
-    sideways. */
-    int direction;
+    /* Whether it's moving sideways in a particular direction. */
+    bool isMoving;
 
     /* Does it float or fall? */
     bool isFloating;
+
+    /* If it falls, does it stay in neat stacks or go sideways to fall
+    more? */
+    bool isSliding;
 
     /* Can they get in each other's way? */
     bool movesTogether;
@@ -51,30 +53,40 @@ class Boulder: public Tile {
     bool fall(Map &map, const Location &place) const;
 
     /* Try to move one tile. Return true on success. */
-    bool move(Map &map, const Location &place, 
-            std::vector<movable::Movable*> &movables) const;
+    bool move(Map &map, const Location &place, int direction, 
+            std::vector<movable::Movable*> &movables);
 
     /* Try to move together. Return true on success. */
-    bool moveTogether(Map &map, const Location &place,
+    bool moveTogether(Map &map, const Location &place, int direction,
             std::vector<movable::Movable*> &movables) const;
 
     /* Find which movables are on top and tell them to move. */
     void carryMovables(const Map &map, const Rect &boulderRect, 
-            std::vector<movable::Movable*> &movables) const;
+            int direction, std::vector<movable::Movable*> &movables) const;
+
+    bool canUpdate(const Map &map, const Location &place, 
+            int direction) const;
 
 public:
     /* Constructor. */
     Boulder(TileType type);
+
+    /* Set the direction the boulder moves, if it does move. Note that
+    this will change its sprite. */
+    void setDirection(Map &map, const Location &place, int direction) const;
 
     /* Look at the map and move, bringing movables along if required. 
     Return false if it didn't move and should therefore be removed from any
     lists of boulders to try to move. */
     virtual bool update(Map &map, Location place, 
             std::vector<movable::Movable*> &movables, 
-            int tick) const;
+            int tick);
 
     /* Look at the map and see if it can move, but don't do anything. */
-    virtual bool canUpdate(const Map &map, const Location &place) const;
+    virtual bool canUpdate(const Map &map, const Location &place);
+
+    /* Figure out the direction to go from the tile sprite. */
+    int getDirection(const Map &map, const Location &place) const;
 };
 
 #endif
