@@ -5,7 +5,7 @@ CXXFLAGS = -std=c++14 -Wall -D_GLIBCXX_DEBUG -D_LIBCXX_DEBUG_PEDANTIC -Og -g
 LINKER_FLAGS = -lSDL2 -lSDL2_image
 NOISE_FLAGS = -I/usr/include/libnoise -L/usr/lib -lnoise
 
-all : main tests
+all : main
 
 main : main.o Map.o World.o Tile.o WindowHandler.o EventHandler.o Movable.o \
         Player.o Collider.o Hotbar.o Entity.o Inventory.o Item.o Action.o \
